[package]
name = "tlsn-hanging"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

notary-client = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.7" }
tlsn-common = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.7" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.7" }
